--- a/index.html
+++ b/index.html
@@ -8,63 +8,87 @@
     <body>
         <h1>Справочная таблица html.</h1>
         <h2>Теги таблицы.</h2>
-        <div class="table">
+        <div>
             <table>
                 <thead>
                     <tr>
-                        <td>
+                        <th>
                             <h3>Тег</h3>
-                        </td>
-                        <td>
+                        </th>
+                        <th>
                             <h3>Имя</h3>
-                        </td>
-                        <td>
+                        </th>
+                        <th>
                             <h3>Описание</h3>
-                        </td>
+                        </th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
                         <td>
-                            <p>< table ></p>
+                            <p class="center">< table ></p>
                         </td>
-                        <td></td>
-                        <td></td>
+                        <td>
+                            <h4>Таблица</h4>
+                        </td>
+                        <td>
+                            <p>элемент оболочки таблиц html</p>
+                        </td>
                     </tr>
                     <tr>
                         <td>
-                            <p>< thead ></p>
+                            <p class="center">< thead ></p>
                         </td>
-                        <td></td>
-                        <td></td>
+                        <td>
+                            <h4>Заголовок таблицы</h4>
+                        </td>
+                        <td>
+                            <p>заголовки столбцов в таблице</p>
+                        </td>
                     </tr>
                     <tr>
                         <td>
-                            <p>< tbody ></p>
+                            <p class="center">< tbody ></p>
                         </td>
-                        <td></td>
-                        <td></td>
+                        <td>
+                            <h4>Тело таблицы</h4>
+                        </td>
+                        <td>
+                            <p>фактические данные таблицы</p>
+                        </td>
                     </tr>
                     <tr>
                         <td>
-                            <p>< tr ></p>
+                            <p class="center">< tr ></p>
                         </td>
-                        <td></td>
-                        <td></td>
+                        <td>
+                            <h4>Строка таблицы</h4>
+                        </td>
+                        <td>
+                            <p>контейнер строки таблицы</p>
+                        </td>
                     </tr>
                     <tr>
                         <td>
-                            <p>< td ></p>
+                            <p class="center">< td ></p>
                         </td>
-                        <td></td>
-                        <td></td>
+                        <td>
+                            <h4>Столбец таблицы</h4>
+                        </td>
+                        <td>
+                            <p>контейнер столбца таблицы</p>
+                        </td>
                     </tr>
                     <tr>
                         <td>
-                            <p>< tfoot ></p>
+                            <p class="center">< tfoot ></p>
                         </td>
-                        <td></td>
-                        <td></td>
+                        <td>
+                            <h4>Нижняя часть табицы</h4>
+                        </td>
+                        <td>
+                            <p>нижний колонтитул таблицы</p>
+                        </td>
                     </tr>
                 </tbody>
             </table>
