--- a/index.html
+++ b/index.html
@@ -93,5 +93,45 @@
                 </tbody>
             </table>
         </div>
+        <h2>Атрибуты таблицы</h2>
+        <div>           
+            <table>
+                <thead>
+                    <tr>
+                        <th>
+                            <h3>Атрибут</h3>
+                        </th>
+                        <th>
+                            <h3>Название</h3>
+                        </th>
+                        <th>
+                            <h3>Описание</h3>
+                        </th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>
+                            <p class="center">colspan</p>  
+                        </td>
+                        <td>
+                            <h4>Объединение столбцов</h4>
+                        </td>
+                        <td>
+                            <p>количество объединенных столбцов</p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <p class="center">rowspan</p>
+                        </td>
+                        <td>
+                            <h4>Объединение строк</h4>
+                        </td>
+                        <td> <p>количество объединенных строк</p></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </body>
 </html>
